@@ -1,10 +1,6 @@
 ## Process this file with automake to produce Makefile.in   -*-Makefile-*-
 
-# SUBDIRS = resources \
-#           perl \
-#           bedrock \
-#           .
-
 SUBDIRS = resources \
           perl \
+          bedrock \
           .
